Directory is sorted prior to formatting